<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:background="@drawable/tower_bg"
    tools:ignore="MissingPrefix">

    <ImageView
        android:id="@+id/imgAutLogo"
        android:layout_width="@dimen/aut_logo"
        android:layout_height="@dimen/aut_logo"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvTitle"
        style="@style/TextViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/title"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="@+id/imgAutLogo"
        app:layout_constraintStart_toStartOf="@+id/imgAutLogo"
        app:layout_constraintTop_toBottomOf="@+id/imgAutLogo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.7">

        <TextView
            android:id="@+id/tvLoginTitle"
            style="@style/TextViewRegular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/etLogin"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:inputType="textEmailAddress"
            android:singleLine="true" />

        <TextView
            android:id="@+id/tvPasswordTitle"
            style="@style/TextViewRegular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/password"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/etPassword"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:inputType="textPassword"
            android:singleLine="true" />

        <Button
            android:id="@+id/btnLogin"
            style="@style/ButtonLightStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/authorization"
            android:textSize="24sp" />

        <Button
            android:id="@+id/btnRegistration"
            style="@style/ButtonDarkStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/registration"
            android:textSize="24sp" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>